# CLI-practice

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
lib/: shape.cc
